# ecliptix-opaque-rs

./: .gitignore  CONTRIBUTING.md  Package.swift  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: benchmarks.yml  build-and-publish.yml  ci.yml  fuzz.yml  miri.yml  sanitizers.yml  security-scan.yml
audit/: OPAQUE_SECURITY_REPORT.md  SECURITY_AUDIT_2026-03-03.md
audit/poc/: critical_001_offline_dictionary_after_server_compromise.rs  critical_002_identity_point_injection.rs  high_001_account_enumeration_oracle.rs  high_002_password_bypass_with_leaked_client_key.rs  high_003_ke3_retry_state_reuse.rs
docs/: FFI_AGENT_API.md  FFI_RELAY_API.md  PQ_KEM_MIGRATION_PROMPT.md  PRODUCTION_READINESS.md  SCIENTIFIC_PAPER_REVISED.md  WIRE_PROTOCOL_VERSIONING.md  main.tex  refs.bib
docs/isms/: INFORMATION_SECURITY_POLICY.md  RISK_ASSESSMENT_REGISTER.md
docs/releases/: RELEASE_PLAYBOOK.md  SECURITY_ADVISORY_TEMPLATE.md  v1.0.1-DRAFT.md
docs/security-review/: OPRF_SEED_OPERATIONAL_GUIDANCE.md  THREAT_MODEL.md
formal/: README.md  hybrid_pq_opaque.pv  hybrid_pq_opaque.spthy  hybrid_pq_opaque_ascii.spthy  hybrid_pq_opaque_auth.pv  hybrid_pq_opaque_uc.ocv  hybrid_pq_opaque_verified.spthy  run-tamarin.sh
formal/logs/: FULL_VERIFICATION_REPORT.md  TAMARIN_VERIFICATION_REPORT.md  tamarin_lemma_last_run.txt  tamarin_lemma_last_run_long.txt  tamarin_lemma_summary_20260218_143425.txt  tamarin_lemma_summary_20260218_143722.csv  tamarin_lemma_summary_long_20260218_153807.csv  verification_status.md
rust/: Cargo.toml  cbindgen.toml  deny.toml
rust/.cargo/: config.toml
rust/crates/opaque-agent/: Cargo.toml
rust/crates/opaque-agent/benches/: bench_protocol.rs  bench_throughput.rs
rust/crates/opaque-agent/src/: authentication.rs  lib.rs  registration.rs  state.rs
rust/crates/opaque-agent/tests/: integration.rs  security_properties.rs  security_proptest.rs  security_regressions.rs
rust/crates/opaque-core/: Cargo.toml
rust/crates/opaque-core/benches/: bench_micro.rs  bench_pq_overhead.rs
rust/crates/opaque-core/src/: crypto.rs  envelope.rs  lib.rs  oprf.rs  pq_kem.rs  protocol.rs  types.rs
rust/crates/opaque-core/tests/: crypto_tests.rs  envelope_tests.rs  oprf_tests.rs  pq_kem_tests.rs  protocol_tests.rs
rust/crates/opaque-ffi/: Cargo.toml
rust/crates/opaque-ffi/src/: agent_ffi.rs  lib.rs  relay_ffi.rs
rust/crates/opaque-ffi/tests/: ffi_error_lifecycle.rs  ffi_roundtrip.rs
rust/crates/opaque-relay/: Cargo.toml
rust/crates/opaque-relay/src/: authentication.rs  lib.rs  registration.rs  state.rs
rust/crates/opaque-relay/tests/: server_tests.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: ffi_lengths.rs  parse_ke1.rs  parse_ke2.rs  parse_registration_record.rs
rust/include/: module.modulemap  opaque_agent.h  opaque_api.h  opaque_common.h  opaque_export.h  opaque_relay.h
scripts/release/: build-apple-xcframework.sh  smoke-release.sh  update-package-swift.sh
swift/: Package.swift
swift/Sources/EcliptixOPAQUE/: OpaqueAgent.swift  OpaqueError.swift  OpaqueRelay.swift  SecureZero.swift  Shim.swift
test_vectors/: test_vectors.json
tests/c/: ffi_smoke.c
