[workspace]
resolver = "2"
members = [
    "crates/opaque-core",
    "crates/opaque-agent",
    "crates/opaque-relay",
    "crates/opaque-ffi",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Oleksandr Melnychenko <oleksandrmelnychenko@users.noreply.github.com>"]
description = "Hybrid PQ-OPAQUE: Post-Quantum Password-Authenticated Key Exchange (4DH Ristretto255 + ML-KEM-768)"
repository = "https://github.com/oleksandrmelnychenko/ecliptix-opaque-rs"

[workspace.dependencies]
ml-kem = { version = "=0.2.3", features = ["zeroize"] }
curve25519-dalek = { version = "=4.1.3", features = ["rand_core", "zeroize"] }
sha2 = "=0.10.9"
hmac = "=0.12.1"
argon2 = "=0.5.3"
crypto_secretbox = "=0.1.1"
subtle = "=2.6.1"
zeroize = { version = "=1.8.2", features = ["derive"] }
rand = "=0.8.5"
rand_core = "=0.9.5"
thiserror = "=2.0.18"

criterion = { version = "=0.5.1", features = ["html_reports"] }
proptest = "=1.10.0"

opaque-core = { path = "crates/opaque-core" }
opaque-agent = { path = "crates/opaque-agent" }
opaque-relay = { path = "crates/opaque-relay" }

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
cast_possible_truncation = "warn"
cast_sign_loss = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
# Use "unwind" so that catch_unwind in opaque-ffi can intercept panics
# at the extern "C" boundary; "abort" would kill the host process.
panic = "unwind"
overflow-checks = true
