[package]
name = "opaque-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
opaque-core = { path = "../crates/opaque-core" }
opaque-ffi = { path = "../crates/opaque-ffi" }

[[bin]]
name = "parse_ke1"
path = "fuzz_targets/parse_ke1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_ke2"
path = "fuzz_targets/parse_ke2.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_registration_record"
path = "fuzz_targets/parse_registration_record.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ffi_lengths"
path = "fuzz_targets/ffi_lengths.rs"
test = false
doc = false
bench = false
