[package]
name = "opaque-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
curve25519-dalek = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
argon2 = { workspace = true }
crypto_secretbox = { workspace = true }
subtle = { workspace = true }
ml-kem = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
hex = "0.4"
criterion = { workspace = true }

[[bench]]
name = "bench_micro"
harness = false

[[bench]]
name = "bench_pq_overhead"
harness = false
