[package]
name = "opaque-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opaque-core = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
opaque-agent = { workspace = true }
